# power-asr

./: MANIFEST.in  alignment_pair_testing.py  pyproject.toml  requirements.txt
lex/: cmudict.rep.json  parse_cmudict.py
power/: aligner.py  levenshtein.py  pronounce.py
power_asr/: __init__.py  lev.py  power_cli.py  utils.py
power_asr/normalize/: __init__.py  normalize.py
power_asr/power/: __init__.py  aligner.py  levenshtein.py  pronounce.py  writers.py
