[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "power_asr"
version = "2025.0.0"
dynamic = ["dependencies"]
requires-python = ">=3.8"
description = "Phonetically-Oriented Word Error Rate aligner (POWER)"
classifiers = [
  "Programming Language :: Python"
]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/NickRuiz/power-asr.git"

[project.scripts]
power_cli = "power_asr:power_cli.main"
power_lev = "power_asr:lev.main"